--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "lucide-react": "^0.477.0",
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
